p（ひとつの段落であることを表す）

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <h4>こんにちは、普通の世界！</h4>
     <h5>こんにちは、小さな世界！</h5>
     <h6>こんにちは、ミクロな世界！</h6>
+
+    <!-- pタグについての説明 -->
     <hr>
+    <h1>pタグとは</h1>
+    <p>pタグとは、パラグラフの略です。pタグで囲まれた部分が文章の段落の一つである事を示します。</p>
   </body>
 </html>
