br（改行を表すタグ）

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <!-- pタグについての説明 -->
     <hr>
     <h1>pタグとは</h1>
-    <p>pタグとは、パラグラフの略です。pタグで囲まれた部分が文章の段落の一つである事を示します。</p>
+    <p>pタグとは、パラグラフの略です。<br>pタグで囲まれた部分が文章の段落の一つである事を示します。</p>
   </body>
 </html>
