img（画像をページ中に挿入）

--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
     <hr>
     <h1>pタグとは</h1>
     <p>pタグとは、パラグラフの略です。<br>pタグで囲まれた部分が文章の段落の一つである事を示します。</p>
+
+    <!-- imgタグについての説明 -->
+    <hr>
+    <h1>imgタグとは</h1>
+    <p>
+      imgタグとは画像を表示するタグです。
+    </p>
+    <img src="./Banana.jpg">
   </body>
 </html>
