strong（「強調」を表すタグ）

--- a/index.html
+++ b/index.html
@@ -23,5 +23,11 @@
       imgタグとは画像を表示するタグです。
     </p>
     <img src="./Banana.jpg">
+
+    <!-- strongタグについての説明 -->
+    <hr>
+    <h1>strongタグとは</h1>
+    <p>strongタグとは、文字を強調してくれます。</p>
+    <p>例）実は僕、<strong>バナナ</strong>が大好きなんです。</p>
   </body>
 </html>
