a（ハイパーリンク）

--- a/index.html
+++ b/index.html
@@ -29,5 +29,13 @@
     <h1>strongタグとは</h1>
     <p>strongタグとは、文字を強調してくれます。</p>
     <p>例）実は僕、<strong>バナナ</strong>が大好きなんです。</p>
+
+    <!-- aタグについての説明 -->
+    <hr>
+    <h1>aタグとは</h1>
+    <p>
+      主にページ遷移をするときに用いるタグです。<br>
+      <a href="http://google.com">google topへ</a>
+    </p>
   </body>
 </html>
