ul, ol, li（リストを意味するタグ）

--- a/index.html
+++ b/index.html
@@ -37,5 +37,21 @@
       主にページ遷移をするときに用いるタグです。<br>
       <a href="http://google.com">google topへ</a>
     </p>
+
+    <!-- ul,ol,liタグについての説明 -->
+    <hr>
+    <h1>ul ol liタグとは</h1>
+    <p>ulタグ</p>
+    <ul>
+      <li>順序の無い</li>
+      <li>リストに</li>
+      <li>使います</li>
+    </ul>
+    <p>olタグ</p>
+    <ol>
+      <li>順序のある</li>
+      <li>リストに</li>
+      <li>使います</li>
+    </ol>
   </body>
 </html>
