table, tr, th, td（テーブル）

--- a/index.html
+++ b/index.html
@@ -53,5 +53,32 @@
       <li>リストに</li>
       <li>使います</li>
     </ol>
+
+    <!-- table tr th td タグについての説明 -->
+    <hr>
+    <h1>table tr th tdタグとは</h1>
+    <p>table tr th tdタグは、表を作成作成するためのタグです</p>
+    <table>
+      <tr>
+        <th></th>
+        <th>バナナの出荷量</th>
+        <th>ピーチの出荷量</th>
+      </tr>
+      <tr>
+        <th>2030年</th>
+        <td>5t</td>
+        <td>3t</td>
+      </tr>
+      <tr>
+        <th>2035年</th>
+        <td>10t</td>
+        <td>2t</td>
+      </tr>
+      <tr>
+        <th>2040年</th>
+        <td>15t</td>
+        <td>1t</td>
+      </tr>
+    </table>
   </body>
 </html>
